# binance-spot-metrics

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
db/: spot_1h_price.sql  spot_1h_price_metrics.sql  spot_1h_transaction_metrics.sql  spot_1h_volume.sql  spot_1h_volume_metrics.sql
src/binance_spot_metrics/: date_helpers.py
src/binance_spot_metrics/model/: __init__.py  base.py  entity.py  kline.py  latest.py  metrics.py  price_metrics.py  transaction_metrics.py
src/binance_spot_metrics/persistence/: db_connector.py  source.py  target.py
src/binance_spot_metrics/queries/: base.py
